# para-aprendizado

./: README.md  app.py  main.py  models.py  pyproject.toml  replit.md  replit_auth.py  routes.py
static/css/: style.css
static/js/: script.js
templates/: 403.html  about.html  base.html  dashboard.html  index.html  profile.html
